tests/negative/missing_genesis_top.veldanava
Primordial_Regalia;

func main():
    genesis print("no genesis prefix");
;
